add GitHub Vinaya4 link

--- a/index.html
+++ b/index.html
@@ -314,10 +314,12 @@ a {
 
 </style>
 <script>
-var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html","襌堂日行規矩1-1.html","行宗記.pdf","行 宗 記.html","行 宗 記.epub","缽之大小.pdf","缽之大小.docx","無上的佈施.docx","濟  緣  記.html","演講次序(對初學介紹戒定慧)1.pdf","演講次序(對初學介紹戒定慧).txt","演講次序(對初學介紹戒定慧).pdf","演講次序(對初學介紹戒定慧).docx","演講次序(安般念).pdf","演講次序(安般念).docx","演講次序(五戒).pdf","沙彌居士先閱律藏.txt","沙彌不得閱讀比丘戒.pdf","沙彌不得閱讀比丘戒.docx","汐止講義：沙彌尼初學戒律.pdf","汐止講義：沙彌尼初學戒律.docx","汐止講義：式叉重受、行法.txt","汐止講義：式叉重受、行法.pdf","汐止講義：式叉重受、行法.docx","汐止講義：四分律比丘尼戒本講記.txt","比丘比丘尼的一日戒律流程.txt","比丘比丘尼的一日戒律流程.html","戒律中用齋相關事.txt","戒律中用齋相關事.pdf","戒律中用齋相關事.docx","戒律中各戒條時限簡表.txt","戒律中各戒條時限簡表.pdf","戒律中各戒條時限簡表.html","慈悲喜捨的禪修方法：《清淨道論》梵住品.txt","慈悲喜捨的禪修方法：《清淨道論》梵住品.pdf","慈悲喜捨的禪修方法：《清淨道論》梵住品.docx","從初學到長期出家的佛學簡介.pptx","律藏會集_5種主題.html","廣嚴淨苑結大界唱相文.html","廣嚴淨苑結大界唱相文.docx","廣化律師全集.html","廣化律師全集.epub","廣化律師全集(未受具閱讀版).html","廣化律師全集(未受具閱讀版).epub","居士犯五戒八戒可否再受戒及出家廣文.txt","居士出家前，家產應處理清楚.pdf","居士出家前，家產應處理清楚.docx","居士五戒八戒菩薩戒懺悔法.docx","居士五戒八戒菩薩戒懺悔法(圓體).pdf","四類藥.pdf","四分律隨機羯磨講義(全).pdf","四分律綱目檢索.html","四乘及五宗.pdf","四乘及五宗.docx","南普陀寺歷任主持簡史表(直式).xlsx","南普陀寺歷任主持簡史表(直式).pdf","南普陀寺歷任主持簡史表(直式).html","南普陀寺歷任主持簡史表(橫式).xlsx","南普陀寺歷任主持簡史表(橫式).pdf","南北傳明相.pdf","供養卡提那衣的意義(功德衣).pdf","佛恩寺結大界唱相文.html","五戒述要釋天因敬編.pdf","五戒述要釋天因敬編.docx","五分律綱目檢索.html","三時繫念疏文樣本.pdf","三時繫念疏文樣本.docx","三時繫念疏文樣本(小).pdf","三時繫念疏文樣本(小).docx","三寶物.pdf","三寶物.doc","README.md"]
+var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html","襌堂日行規矩1-1.html","行宗記.pdf","行 宗 記.html","行 宗 記.epub","缽之大小.pdf","缽之大小.docx","無上的佈施.docx","濟  緣  記.html","演講次序(對初學介紹戒定慧)1.pdf","演講次序(對初學介紹戒定慧).txt","演講次序(對初學介紹戒定慧).pdf","演講次序(對初學介紹戒定慧).docx","演講次序(安般念).pdf","演講次序(安般念).docx","演講次序(五戒).pdf","沙彌居士先閱律藏.txt","沙彌不得閱讀比丘戒.pdf","沙彌不得閱讀比丘戒.docx","汐止講義：沙彌尼初學戒律.pdf","汐止講義：沙彌尼初學戒律.docx","汐止講義：式叉重受、行法.txt","汐止講義：式叉重受、行法.pdf","汐止講義：式叉重受、行法.docx","汐止講義：四分律比丘尼戒本講記.txt","比丘比丘尼的一日戒律流程.txt","比丘比丘尼的一日戒律流程.html","戒律中用齋相關事.txt","戒律中用齋相關事.pdf","戒律中用齋相關事.docx","戒律中各戒條時限簡表.txt","戒律中各戒條時限簡表.pdf","戒律中各戒條時限簡表.html","慈悲喜捨的禪修方法：《清淨道論》梵住品.txt","慈悲喜捨的禪修方法：《清淨道論》梵住品.pdf","慈悲喜捨的禪修方法：《清淨道論》梵住品.docx","從初學到長期出家的佛學簡介.pptx","律藏會集_5種主題.html","廣嚴淨苑結大界唱相文.html","廣嚴淨苑結大界唱相文.docx","廣化律師全集.html","廣化律師全集.epub","廣化律師全集(未受具閱讀版).html","廣化律師全集(未受具閱讀版).epub","居士犯五戒八戒可否再受戒及出家廣文.txt","居士出家前，家產應處理清楚.pdf","居士出家前，家產應處理清楚.docx","居士五戒八戒菩薩戒懺悔法.docx","居士五戒八戒菩薩戒懺悔法(圓體).pdf","四類藥.pdf","四分律隨機羯磨講義(全).pdf","四乘及五宗.pdf","四乘及五宗.docx","南普陀寺歷任主持簡史表(直式).xlsx","南普陀寺歷任主持簡史表(直式).pdf","南普陀寺歷任主持簡史表(直式).html","南普陀寺歷任主持簡史表(橫式).xlsx","南普陀寺歷任主持簡史表(橫式).pdf","南北傳明相.pdf","供養卡提那衣的意義(功德衣).pdf","佛恩寺結大界唱相文.html","五戒述要釋天因敬編.pdf","五戒述要釋天因敬編.docx","三時繫念疏文樣本.pdf","三時繫念疏文樣本.docx","三時繫念疏文樣本(小).pdf","三時繫念疏文樣本(小).docx","三寶物.pdf","三寶物.doc","README.md"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
+var ArrLi2 = ['戒學演講投影講義','https://drive.google.com/drive/u/0/folders/1f5uPo53QLV_WSG3MZp8qXUPe78KNiEzj','四分律綱目檢索.html','file:///D:/GitHub/vinaya4/%E5%9B%9B%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','五分律綱目檢索.html','file:///D:/GitHub/vinaya4/%E4%BA%94%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html']
+
 function css3(obj,attrObj){
     // 插入多種css語法，取代原來網頁的語法
     for (var i in attrObj) {
@@ -413,6 +415,28 @@ function mulaDiv() {
     // 以傳統js語法，不用jQuery 或 jquery.mobile，動態插入網址，這樣，所有瀏覽器都支援
     // 因為不用ol li 所以自訂 有序清單 的數字
     var j = 1
+
+    for (var i = 0; i < ArrLi2.length; i += 2) {
+        var g = document.createElement('div')
+        var aA = document.createElement('a')
+        // 加入超連結
+        aA.setAttribute('href', ArrLi2[i + 1])
+        aA.innerHTML = '　' + j + '.　' + ArrLi2[i]
+        // 加入顏色樣式，以區分PDF檔等
+        if(/pdf/.test(ArrLi2[i])){aA.className = 'da'}
+        if(/doc/.test(ArrLi2[i])){aA.className = 'b'}
+        if(/xls/.test(ArrLi2[i])){aA.className = 'yg'}
+        if(/ppt/.test(ArrLi2[i])){aA.className = 'dv'}
+        if(/htm/.test(ArrLi2[i])){aA.className = 'bt'}
+
+        // 加入data*名稱，才可動態查詢，有了這個屬性，可以用 CSS 來獲取
+        g.setAttribute('data-title', ArrLi2[i].toLowerCase())
+        g.className = 'small'
+        g.appendChild(aA)
+        mula.appendChild(g)
+        j++
+    }
+            
     for (var k of ArrLi) {
         var g = document.createElement('div')
         var aA = document.createElement('a')
