--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html"
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
-var ArrLi2 = ['戒學演講投影講義','https://drive.google.com/drive/u/0/folders/1f5uPo53QLV_WSG3MZp8qXUPe78KNiEzj','四分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E5%9B%9B%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','五分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E4%BA%94%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','部派分裂圖 圓形圖','https://adbdao.github.io/mycoding/D3_tree_only.html','部派分裂圖 方形圖','https://adbdao.github.io/mycoding/D3_tree_Box.html']
+var ArrLi2 = ['戒學演講投影講義','https://drive.google.com/drive/u/0/folders/1f5uPo53QLV_WSG3MZp8qXUPe78KNiEzj','四分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E5%9B%9B%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','五分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E4%BA%94%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','部派分裂圖 圓形圖','https://adbdao.github.io/mycoding/D3_tree_Vertical_only.html','部派分裂圖 方形圖','https://adbdao.github.io/mycoding/D3_tree_Vertical_Box.html']
 
 function css3(obj,attrObj){
     // 插入多種css語法，取代原來網頁的語法
