add File vinaya for pācittiya

--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -2,9 +2,9 @@
 <html>
     <meta charset="utf-8">
     <head>
-    <title>律藏會集、三大部、戒律諸書</title>
+    <title>我的講義草稿</title>
     <base target="_blank">
-    <link rel="icon" href="x-to-h/老和尚的蓮花.ico"/>
+    <link rel="icon" href="老和尚的蓮花.ico"/>
 <style>
 /**{border-radius: 8px;padding: 3px;}*/
 
@@ -213,7 +213,7 @@ from {-o-transform: rotate(360deg);}
 to {-o-transform: rotate(0deg);}}
 
 
-body {background: -webkit-linear-gradient(left, peru 0.00%, gold 90.00%);
+body {background: -webkit-linear-gradient(left, lawngreen 0.00%, tan 90.00%);
 background: linear-gradient(left, peru 0.00%, gold 90.00%);
 /*background-size: 100vw 200vh;
 background-repeat: no-repeat;*/
@@ -314,11 +314,11 @@ a {
 
 </style>
 <script>
-var ArrLi = ["鈔 記.html","襌堂日行規矩1.txt","襌堂日行規矩1.html","襌堂日行規矩1-1.html","行宗記.pdf","行 宗 記.html","行 宗 記.epub","缽之大小.pdf","缽之大小.docx","無上的佈施.docx","濟  緣  記.html","演講次序(對初學介紹戒定慧)1.pdf","演講次序(對初學介紹戒定慧).txt","演講次序(對初學介紹戒定慧).pdf","演講次序(對初學介紹戒定慧).docx","演講次序(安般念).pdf","演講次序(安般念).docx","演講次序(五戒).pdf","法雨寺結大界唱相文.html","法雨寺結大界【公告文】.pdf","沙彌居士先閱律藏.txt","沙彌不得閱讀比丘戒.pdf","沙彌不得閱讀比丘戒.docx","汐止講義：沙彌尼初學戒律.pdf","汐止講義：沙彌尼初學戒律.docx","汐止講義：式叉重受、行法.txt","汐止講義：式叉重受、行法.pdf","汐止講義：式叉重受、行法.docx","汐止講義：四分律比丘尼戒本講記.txt","比丘比丘尼的一日戒律流程.txt","比丘比丘尼的一日戒律流程.html","戒律中用齋相關事.txt","戒律中用齋相關事.pdf","戒律中用齋相關事.docx","戒律中各戒條時限簡表.txt","戒律中各戒條時限簡表.pdf","戒律中各戒條時限簡表.html","慈悲喜捨的禪修方法：《清淨道論》梵住品.txt","慈悲喜捨的禪修方法：《清淨道論》梵住品.pdf","慈悲喜捨的禪修方法：《清淨道論》梵住品.docx","從初學到長期出家的佛學簡介.pptx","律藏會集_5種主題.html","廣嚴淨苑結大界唱相文.html","廣嚴淨苑結大界唱相文.docx","廣化律師全集.html","廣化律師全集.epub","廣化律師全集(未受具閱讀版).html","廣化律師全集(未受具閱讀版).epub","居士犯五戒八戒可否再受戒及出家廣文.txt","居士出家前，家產應處理清楚.pdf","居士出家前，家產應處理清楚.docx","居士五戒八戒菩薩戒懺悔法.docx","居士五戒八戒菩薩戒懺悔法(圓體).pdf","四類藥.pdf","四分律隨機羯磨講義(全).pdf","四乘及五宗.pdf","四乘及五宗.docx","南普陀寺歷任主持簡史表(直式).xlsx","南普陀寺歷任主持簡史表(直式).pdf","南普陀寺歷任主持簡史表(直式).html","南普陀寺歷任主持簡史表(橫式).xlsx","南普陀寺歷任主持簡史表(橫式).pdf","南北傳明相.pdf","供養卡提那衣的意義(功德衣).pdf","佛恩寺結大界唱相文.html","五戒述要釋天因敬編.pdf","五戒述要釋天因敬編.docx","不受食戒.html","三時繫念疏文樣本.pdf","三時繫念疏文樣本.docx","三時繫念疏文樣本(小).pdf","三時繫念疏文樣本(小).docx","三寶物.pdf","三寶物.doc","三十捨墮之犯悔開緣表.html","README.md","D3_tree_Vertical_別眾食戒導圖教材.html"]
+var ArrLi = ["律藏的文獻層次.html","不受食戒.txt"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
-var ArrLi2 = ['戒學演講投影講義','https://drive.google.com/drive/u/0/folders/1f5uPo53QLV_WSG3MZp8qXUPe78KNiEzj','四分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E5%9B%9B%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','五分律綱目檢索.html','https://adbdao.github.io/vinaya4/%E4%BA%94%E5%88%86%E5%BE%8B%E7%B6%B1%E7%9B%AE%E6%AA%A2%E7%B4%A2.html','部派分裂圖 圓形圖.html','https://adbdao.github.io/mycoding/D3_tree_Vertical_only.html','部派分裂圖 方形圖.html','https://adbdao.github.io/mycoding/D3_tree_Vertical_Box.html','歷代漢文大藏經概述(樹狀圖).html','https://adbdao.github.io/mycoding/D3_tree_Vertical_Tipitaka_History.html','歷代漢文大藏經概述(樹形圖).html','https://adbdao.github.io/mycoding/D3_pack_layout_Tipitaka_History.html']
+var ArrLi2 = []
 
 function css3(obj,attrObj){
     // 插入多種css語法，取代原來網頁的語法
@@ -365,7 +365,8 @@ function CarLum(){
     addDiv(Co,'div','Co1')
     addCarFu(Lum1,16,4,2,50,6,50,'0px','100px','orange','BigFu')
     addCarFu(Lum1,12,3,16,16,18,18,'-26px','126px','orange','OutFu')
-    addCarFu(Lum1,3,3,10,10,10,10,'-38px','138px','cyan','OutFu1')
+    // 取消3個外圓點，作為區別
+    // addCarFu(Lum1,3,3,10,10,10,10,'-38px','138px','cyan','OutFu1')
     // addCarFu(Lum1,12,3,8,8,8,8,'-46px','146px','magenta','OutFu1')
     addCarFu(Co1,8,4,2,45,3,45,'0px','45px','hotpink','InsideFu')
     addDiv(Co1,'div','Co2')
@@ -487,7 +488,7 @@ function dt() {
         <div id="Lumout">
         </div>
     <div id="mula">
-        <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()">
+        <h1 class="big">我的講義草稿 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()">
             <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
             <input id="pdf" type="button" class="da" value="僅pdf" onclick="MyIni('pdf')">
             <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
