txt to File Vinaya && txt to html for New JY html show

--- a/不受食戒.html
+++ b/不受食戒.html
@@ -101,9 +101,9 @@
         }
 
         #div1 {
-            font-size: 76pt;
-            color: #ccb;
-            font-family: c;
+            font-size: 18pt;
+            color: orange;
+            white-space: pre-wrap;
             /*margin: 0 0 0 3cm;*/
         }
 
@@ -347,7 +347,313 @@
         <input id="myValue2" type="text" placeholder='輸入字型名稱，立刻變換字型' />
         <textarea id="txt1" type="text" placeholder='可打字'></textarea>
         <br />
-        <div id="div1"></div>
+        <div id="div1">
+十門分之：
+﹛一﹜制受意，
+    《多論》，五義故：
+    ﹛一﹜為斷盜竊因緣，
+    ﹛二﹜為作證明，
+    ﹛三﹜為正誹謗，
+    ﹛四﹜為成少欲知足，
+    ﹛五﹜為物生信，令外道得益。
+
+﹛二﹜能受人，
+    　　　　　　　　　　　　　　┌一能受、
+    　　　　　　　　　　　　　　├二能令受、
+    釋曰：有五分能成就受攝飲食：┼三物、
+    　　　　　　　　　　　　　　├四受所、
+    　　　　　　　　　　　　　　└五至邊。
+    　　┌能受者，具戒比丘住於自性，求得在此處。
+    　　├能令受者，除比丘及與學，餘人非人畜生中，隨一被教不被教。若有能解此義，謂此物我應施比丘。
+    此中┼物者，有五種：一依時量、二依更量、三依七日量、四依一期量、五依大開量。此五攝一切物皆盡。
+    　　├處所者，地及水。
+    　　└至邊者，有三種：一至身邊、二至物邊、三至器邊。如制受食戒中廣說應知。
+
+    若破戒被擯別住十三難三舉滅擯應滅擯學悔等人，不成受故
+
+﹛三﹜所受境，
+    授食人
+        三類：人、非人、畜
+        六眾：比丘尼、式叉、沙彌、沙彌尼、居士、居士婦
+    開緣：
+        《彌沙塞部和醯五分律》：「
+        有病比丘欲得美粥。佛言。聽淨人為作。若無淨人。聽比丘淨洗燒器著水。令淨人洮豆米著中。比丘然後燃火。粥熟更從淨人受持與病人」( 大正 22p171c )
+        《摩訶僧祇律》：「
+        我無淨人有牛。尊者須者當取。使淨人長囊盛種種糧食。計日日食分。作一齊已。紐結著牛上。至食時。當使淨人取。若無淨人者。一人挽紐。一人承取口言受受是名受」( 大正 22p359a )
+
+﹛四﹜所受食，
+    未﹛一﹜塵食墮
+        《十誦律》：「
+        佛言。從今日聽五塵不受應食。米塵穀塵水塵衣塵風塵。是為五塵。」( 大正 23p469b )
+
+        《善見律毘婆沙》：「
+        若塵大，可除去食不犯，若塵細落不可除，應使人度」( 大正 24p785a )
+        《摩訶僧祇律》卷16：「比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
+            坋草葉者，當更受。
+            若坋草葉及食者，一切更受。
+            若畜生振身塵來，若作意受者，得名為受。
+            若眾鳥塵來亦如是。
+            若比丘食時，女人行衣曳地塵起來坋，亦復如是。
+            若淨人行草葉時，比丘應語言：「懸放。」若行鹽果菜，應語：「懸放。」
+            若淨人行果墮草上，即轉去者，不名為受。
+            小停者，得名為受。」(CBETA 2022.Q1, T22, no. 1425, p. 357b29-c7)
+
+    未﹛二﹜便利等物
+        《善見律毘婆沙》：「若急病因緣，大小便及灰土」( 大正 24p785b )
+        《明了論》，名大開(10b)量。如下卷說。律中，灰土泥等須受
+        《四分律》：「
+        爾時病毒比丘。醫教服田中泥。佛言。聽以器盛水和之漉然後受飲」( 大正 22p871a )
+
+    未﹛三﹜緣開
+        《十誦律》：「
+        佛言。從今日聽擔食藏。莫使人見。若食當出道取一搦不受得食。以經曠澤故。」( 大正 23p459c )
+        《僧祇》《多論》，見昨日石上殘食，不受開食
+
+        《佛說目連問戒律中五百輕重事經》：「
+        問病比丘無人看。比丘得與作食不。答山野無人處日中不得往還得作。七日先淨薪米。受取得作。」( 大正 24p989b )
+
+    未﹛四﹜濁水
+        《摩訶僧祇律》：「
+        若水濁者應受。若水性黃色者飲無罪」( 大正 22p357b )
+
+        《彌沙塞部和醯五分律》卷7：「
+        有醎水，比丘不受不敢飲之。以是白佛。佛言：「若不著鹽，性醎，聽不受飲。」」(CBETA 2022.Q1, T22, no. 1421, p. 53c21-23)
+
+    未﹛五﹜流汗
+        《善見》：若額頭汗流入缽中，須更受。臂中汗流入手，不須受
+
+    未﹛六﹜楊枝等物
+        《摩訶僧祇律》：「
+        嚼時不得咽汁若誤咽者無罪。」( 大正 22p505b )
+        《摩訶僧祇律》：「
+        比丘欲食雪。當從淨人受。若無淨人者。當洗手令淨。自取食。氷雹亦如是。是名氷雪。」( 大正 22p360a )
+
+    午﹛二﹜明轉變
+        《善見律毘婆沙》：「
+        若受生薑後生芽，不失受。若火淨以後生芽，生芽處應更淨，非生芽得食無罪。先受鹽，鹽變成水，不失受。」( 大正 24p785b )
+        《摩訶僧祇律》：「
+        若乞食。食冷得自溫無罪」( 大正 22p477c )
+
+﹛五﹜受食處，
+    《明了論》：求得在此處，地及水中。空中，不成。如前受中說。
+    五中。空中不成，謂能受在空；若論所對在空，亦應不成；故知能所俱須在地。
+
+﹛六﹜受食法，
+    《律二十二明了論》：「( 大正 24p669a )
+    偈曰：能解四種受命緣。
+    釋曰：律中說受攝飲食有四種：
+        一、身受非心受。如律文，若比丘申鉢，心緣別事受他施飲食，廣說如本。
+        二、有心受非身受。如律文，若人送飲食施此比丘，比丘心受，攝以屬己，廣說如本。
+        三、有身心俱受。若比丘身心平等，欲得所施飲食。行施人至比丘邊，度與比丘非所遮。
+        四、非身心受。如律文，若比丘或以脚指、或以手指畫地作界相。餘人送飲食置界中，此即[4]被受。餘一切文句，從廣道應知。
+
+    偈曰：能成就受五種分。
+    　　　　　　　　　　　　　　┌一能受、
+    　　　　　　　　　　　　　　├二能令受、
+    釋曰：有五分能成就受攝飲食：┼三物、
+    　　　　　　　　　　　　　　├四受所、
+    　　　　　　　　　　　　　　└五至邊。
+    　　┌能受者，具戒比丘住於自性，求得在此處。
+    　　├能令受者，除比丘及與學，餘人非人畜生中，隨一被教不被教。若有能解此義，謂此物我應施比丘。
+    此中┼物者，有五種：一依時量、二依更量、三依七日量、四依一期量、五依大開量。此五攝一切物皆盡。
+    　　├處所者，地及水。
+    　　└至邊者，有三種：一至身邊、二至物邊、三至器邊。如制受食戒中廣說應知。
+
+    偈曰：作殘食法有十種，各各能解行彼方。
+    　　　　　　　　　　　　┌一病人殘、
+    　　　　　　　　　　　　├二非病人殘、
+    　　　　　　　　　　　　├三等分殘、
+    　　　　　　　　　　　　├四非等分殘、
+    釋曰：律中說殘食有十種：┼五加行所作、
+    　　　　　　　　　　　　├六非加行所作、
+    　　　　　　　　　　　　├七遮食人所作、
+    　　　　　　　　　　　　├八非遮食人所作、
+    　　　　　　　　　　　　├九自所作、
+    　　　　　　　　　　　　└十使比丘所作。
+    此義如廣說當應知。若人能解此義，此人於律則明了。
+
+    《彌沙塞部和醯五分律》：「
+    佛種種呵責已。又語迦葉。汝雖少欲而為人惡賤。不應食棄去食。若食突吉羅。」( 大正 22p53a )
+    今聽為作人甞食。但不得咽。」
+        佛言。聽從龍受食」
+        佛言。今聽諸比丘從天受食。」
+        佛言。今聽諸比丘從鬼受食」
+        佛言。聽食獼猴授食」
+            佛言。若無淨人聽諸比丘以施主語食為受食」
+            佛言。若施主惡賤不肯授食。亦聽以彼語取為受食。
+        　　　　┌1. 身授身受。
+        有四種受┼2. 物授物受。
+        　　　　├3. 手授手受。
+        　　　　└4. 教取而受。
+    有醎水比丘不受不敢飲之。以是白佛。佛言。若不著鹽性醎。聽不受飲。」
+
+    《善見律毘婆沙》：「
+    若天人授食，或鬼神授食，畜生及飛鳥授食，皆成受。」( 大正 24p785a )
+
+    《十誦律》：「
+    大德自食。我等有急事。留食便去。諸比丘不知當云何。是事白佛。佛言。信佛法人一心與。若捨去便應食。」( 大正 23p460a )
+
+    《四分律》：「
+    　　　　　　┌1. 手與手受。
+    　　　　　　├2. 或手與持物受。
+    受者有五種受┼3. 若持物授手受。
+    　　　　　　├4. 若持物授持物受。
+    　　　　　　└5. 若遙過物與。與者受者俱知中間無所觸礙。得墮手中。
+    　　　　　　┌1. 若身與身受
+    　　　　　　├2. 若衣與衣受。
+    復有五種受食┼3. 若曲肘與曲肘受
+    　　　　　　├4. 若器與器受。
+    　　　　　　└5. 若有因緣置地與
+
+    《僧祇》：若繩連器物，相連不斷，與比丘者，成受，非威儀。乃至淨人樹上搖果，比丘以衣缽承取，或以手腳口下果時觸枝葉者
+
+    淨人三法：﹛一﹜火淨，﹛二﹜別藥體，﹛三﹜施心授與。
+    比丘三法：﹛一﹜仰手受，﹛二﹜或加記識，﹛三﹜分體分。
+
+﹛七﹜須食觀，
+    ﹛一﹜計功多少，量彼來處；
+    ﹛二﹜自忖己德行，全缺多減；
+    ﹛三﹜防心顯過，不過三毒；
+    ﹛四﹜正事良藥，取濟形苦；
+    ﹛五﹜為成道業，世報非意
+
+﹛八﹜食食法，
+    《十誦律》：「
+    行食不如法。半著鉢中半棄在地。是諸比丘不知云何得食。是事白佛。佛言。食墮所受草葉上者應食。若有土著者。吹土却而食。或有多土著者。水洗得食。」( 大正 23p273c )
+
+﹛九﹜失受法，
+    偈曰：能解七種失受因。
+    釋曰：
+    1. 佛法中物有二種，謂┬淨、
+    　　　　　　　　　　└不淨。
+    　　　　　　　　　　┌一決意棄捨、
+    　　　　　　　　　　├二他逼奪、
+    　　　　　　　　　　├三所變異、
+    2. 失受攝因緣有七種：┼四度異性、
+    　　　　　　　　　　├五捨戒、
+    　　　　　　　　　　├六捨命、
+    　　　　　　　　　　└七正法滅沒。
+        1. 決意棄捨者，若人不用此物，決意棄捨與他。
+        2. 他逼奪者，若異自同類人，為屬己故逼奪。
+        3. 變異者，用聖通慧，變異別物令成別物。
+        4. 度異性者，轉男成女。
+        5. 捨戒者，此物先是比丘受，後捨比丘戒，猶攝屬己，此物失本受。
+        6. 捨命者，約一切退失故說失受，由一切滅失故受亦失。
+        7. 正法滅沒者，是時中若無一人生在剡浮洲中入人道攝，或具戒或不具戒，無量壽命及轉易有生，聖人無復一在，此時正法已滅沒。
+    3. 由此七因緣，一切受攝皆謝。
+
+﹛十﹜對文解
+
+======================
+我編的講義：↓↓↓
+
+不受食戒
+    什麼叫「受食」？
+    誰可以受食給比丘？
+    那些東西要手受？
+    那些東西不需要手受？
+    那些東西介於兩者之間？
+    怎麼樣才算是正式的手受？
+    手受的時效多長？
+    怎麼樣會失去手受？
+    怎麼樣要重新手受？
+
+======================
+不受食戒
+什麼叫「受食」？
+    有人拿食物給你，才可以吃。比丘不可以主動去拿取食物及碰觸食物
+誰可以受食給比丘？
+    除了比丘(受比丘戒，具備比丘身份的人)，其他所有人都可以。不只人，六道眾生都可以
+那些東西要手受？
+    食物、藥物。
+    就是四類藥：食藥、非時藥、七日藥、終身藥。
+    就是能放進口中吃的東西
+那些東西不需要手受？
+    水、
+    楊枝(刷牙及口腔清潔用品)、
+    腐爛藥(大開量)：大小便及灰土。
+    當然，不能吃的東西就不必手受
+那些東西介於兩者之間？
+    鹹水、濁水。
+    《摩訶僧祇律》：「若水濁者應受。若水性黃色者飲無罪」( 大正 22p357b )
+    《彌沙塞部和醯五分律》卷7：「有醎水，比丘不受不敢飲之。以是白佛。佛言：「若不著鹽，性醎，聽不受飲。」」(CBETA 2022.Q1, T22, no. 1421, p. 53c21-23)
+怎麼樣才算是正式的手受？
+    《四分律》：「
+    　　　　　　┌1. 手與手受。
+    　　　　　　├2. 或手與持物受。
+    受者有五種受┼3. 若持物授手受。
+    　　　　　　├4. 若持物授持物受。
+    　　　　　　└5. 若遙過物與。與者受者俱知中間無所觸礙。得墮手中。
+    　　　　　　┌1. 若身與身受
+    　　　　　　├2. 若衣與衣受。
+    復有五種受食┼3. 若曲肘與曲肘受
+    　　　　　　├4. 若器與器受。
+    　　　　　　└5. 若有因緣置地與
+    《彌沙塞部和醯五分律》：「
+    佛言。若無淨人聽諸比丘以施主語食為受食」
+    佛言。若施主惡賤不肯授食。亦聽以彼語取為受食。
+    　　　　┌1. 身授身受。
+    有四種受┼2. 物授物受。
+    　　　　├3. 手授手受。
+    　　　　└4. 教取而受。
+    《十誦律》：「
+    「大德自食，我等有急事。」留食便去。諸比丘不知當云何，是事白佛。佛言：「信佛法人一心與，若捨去便應食。」
+    《律二十二明了論》：「
+    偈曰：能解四種受命緣。
+    釋曰：律中說受攝飲食有四種：
+        一、身受非心受。如律文，若比丘申鉢，心緣別事受他施飲食，廣說如本。
+        二、有心受非身受。如律文，若人送飲食施此比丘，比丘心受，攝以屬己，廣說如本。
+        三、有身心俱受。若比丘身心平等，欲得所施飲食。行施人至比丘邊，度與比丘非所遮。
+        四、非身心受。如律文，若比丘或以脚指、或以手指畫地作界相。餘人送飲食置界中，此即被受。
+手受有時效嗎？
+    應該說：手受後能吃的時間。
+    食藥：明相出至正午、
+    非時藥：明相出至隔日明相出、
+    七日藥：七日、
+    終身藥：不限，就是終身
+怎麼樣會失去手受？
+    《明了論》：
+    偈曰：能解七種失受因。
+    釋曰：
+    1. 佛法中物有二種，謂┬淨、
+    　　　　　　　　　　└不淨。
+    　　　　　　　　　　┌一決意棄捨、
+    　　　　　　　　　　├二他逼奪、
+    　　　　　　　　　　├三所變異、
+    2. 失受攝因緣有七種：┼四度異性、
+    　　　　　　　　　　├五捨戒、
+    　　　　　　　　　　├六捨命、
+    　　　　　　　　　　└七正法滅沒。
+        1. 決意棄捨者，若人不用此物，決意棄捨與他。
+        2. 他逼奪者，若異自同類人，為屬己故逼奪。
+        3. 變異者，用聖通慧，變異別物令成別物。
+        4. 度異性者，轉男成女。
+        5. 捨戒者，此物先是比丘受，後捨比丘戒，猶攝屬己，此物失本受。
+        6. 捨命者，約一切退失故說失受，由一切滅失故受亦失。
+        7. 正法滅沒者，是時中若無一人生在剡浮洲中入人道攝，或具戒或不具戒，無量壽命及轉易有生，聖人無復一在，此時正法已滅沒。
+    3. 由此七因緣，一切受攝皆謝。
+怎麼樣要重新手受？
+    1.灰塵落食上、2.淨人手觸。
+    《十誦律》：「
+        佛言。從今日聽五塵不受應食。米塵穀塵水塵衣塵風塵。是為五塵。」( 大正 23p469b )
+    《善見律毘婆沙》：「
+        若塵大，可除去食不犯，若塵細落不可除，應使人度……
+        若食時，額頭汗流落鉢中，應更受。若臂中汗流入手，不須受。」( 大正 24p785a )
+    《摩訶僧祇律》卷16：「比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
+        坋草葉者，當更受。
+        若坋草葉及食者，一切更受。
+        若畜生振身塵來，若作意受者，得名為受。
+        若眾鳥塵來亦如是。
+        若比丘食時，女人行衣曳地塵起來坋，亦復如是。
+        若淨人行草葉時，比丘應語言：「懸放。」若行鹽果菜，應語：「懸放。」
+        若淨人行果墮草上，即轉去者，不名為受。
+        小停者，得名為受。」(CBETA 2022.Q1, T22, no. 1425, p. 357b29-c7)
+    《十誦律》：「
+    行食不如法。半著鉢中半棄在地。是諸比丘不知云何得食。是事白佛。佛言。食墮所受草葉上者應食。若有土著者。吹土却而食。或有多土著者。水洗得食。」( 大正 23p273c )
+
+    《薩婆多毘尼毘婆沙》：「
+    設受已淨人若觸更受。」( 大正 23p539b )
+    </div>
     </div>
     <input type="button" id="btnHidden" value="隱藏多餘按鈕" />
     <table id="tab1"></table>
