--- a/懺悔的意義.html
+++ b/懺悔的意義.html
@@ -102,7 +102,7 @@
 
         #div1 {
             font-size: 18pt;
-            color: #ccb;
+            color: orange;
             white-space: pre-wrap;
             /*margin: 0 0 0 3cm;*/
         }
@@ -351,7 +351,11 @@
         <input id="myValue2" type="text" placeholder='輸入字型名稱，立刻變換字型' />
         <textarea id="txt1" type="text" placeholder='可打字'></textarea>
         <br />
-        <div id="div1">佛學辭典：
+        <div id="div1">
+什麼是懺悔
+懺悔的意義
+
+佛學辭典：
     《一切經音義》唐_慧琳》「懺悔」：懺謂懺摩 此云謂忍 謂請前人忍受我悔罪
 
     《一切經音義》唐_慧琳》「懺悔」：集訓云 自陳過也
@@ -407,7 +411,7 @@
     比丘：說罪者，意欲陳罪說己先愆，改往修來至誠懇責。(發露懺悔！)
     心中：比丘的發露懺悔，是為了消除未來再犯的一切焦慮與內疚的方法。懺悔則安樂。(心中安樂清淨！)
     大乘：宿世一切業緣。發露黑惡一切罪事。！若欲懺悔者，端坐念實相。！若我無始流轉往來，若我此生、若於餘生所有業障，若自作、若教他作、見作隨喜，及煩惱障、諸眾生障、法障、轉後世障。！(懺悔無始來所有一切障！)
-        </div>
+</div>
     </div>
     <input type="button" id="btnHidden" value="隱藏多餘按鈕" />
     <table id="tab1"></table>
