--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -314,7 +314,7 @@ a {
 
 </style>
 <script>
-var ArrLi = ["期末考2021.txt","期中考2022.txt","新衣不作壞色著戒.txt","懺悔的意義.txt","律藏的文獻層次.html","不受食戒.txt"]
+var ArrLi = ["期末考2022.txt","期中考2022.txt","新衣不作壞色著戒.txt","授具足戒.txt","懺悔的意義.txt","律藏的文獻層次.html","四諍.txt","不受食戒.txt"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
