upload JY && .adb.ini

--- a/比丘比丘尼的一日戒律流程.html
+++ b/比丘比丘尼的一日戒律流程.html
@@ -110,4 +110,12 @@ input {height: 30px;}
 　　<span class="sb">睡眠始寤，當願眾生：一切智覺，周顧十方。<br/>
 　　以水洗面，當願眾生：得淨法門，永無垢染。</span><br/>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script>
+	// 亮色暗色模式切換的套件
+  function addDarkmodeWidget() {
+    new Darkmode().showWidget();
+  }
+  window.addEventListener('load', addDarkmodeWidget);
+</script>
 </html>
