--- a/滅諍犍度.html
+++ b/滅諍犍度.html
@@ -46,7 +46,7 @@
             margin: auto;
         }
 
-        tr:hover {
+        td:hover {
             border: 3px solid rgba(0, 245, 255, 0.925);
             /* box-shadow: 5px 5px 20px cyan; */
         }
