--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -237,7 +237,7 @@ background-repeat: no-repeat;*/
 .y {font-weight: bold;background: yellow;}
 .o {font-weight: bold;color: darkorange;}
 .yg {font-weight: bold;color: green;}
-.dc {font-weight: bold;color: darkcyan;background: white;}
+.dc {font-weight: bold;color: darkcyan;}
 .dg {font-weight: bold;color: salmon;}
 .b {font-weight: bold;color: blue;}
 .p {font-weight: bold;color: slateblue;}
@@ -314,7 +314,7 @@ a {
 
 </style>
 <script>
-var ArrLi = ["過量床足戒.txt","為何要持戒.txt","滅諍犍度.txt","期末考2023.txt","期末考2022下.txt","期末考2022.txt","期中考2023.txt","期中考2022下.txt","期中考2022.txt","有難蘭若受食戒「弓量」.txt","新衣不作壞色著戒.txt","授具足戒.txt","戒律書畾.adb.ini","懺悔的意義.txt","律藏的文獻層次.html","四諍.txt","內觀染著.txt","不受食戒.txt","taisho.adb.ini"]
+var ArrLi = ["過量床足戒.txt","菩薩戒體相關資料.txt","為何要持戒.txt","滅諍犍度.txt","期末考下2023.txt","期末考2023.txt","期末考2022下.txt","期末考2022.txt","期中考下2023.txt","期中考2023.txt","期中考2022下.txt","期中考2022.txt","有難蘭若受食戒「弓量」.txt","新衣不作壞色著戒.txt","授具足戒.txt","戒律書畾.adb.ini","懺悔的意義.txt","律藏的文獻層次.html","四諍.txt","內觀染著.txt","不受食戒.txt","taisho.adb.ini"]
 var ArrLi1=[
 'x-to-h(目錄超連結).txt','x-to-h(目錄超連結2).txt','x-to-h(目錄超連結3).txt','x-to-h(註釋).txt','x-to-h.css','x-to-h.txt'
 ]
@@ -450,6 +450,9 @@ function mulaDiv() {
         if(/xls/.test(k)){aA.className = 'yg'}
         if(/ppt/.test(k)){aA.className = 'dv'}
         if(/htm/.test(k)){aA.className = 'bt'}
+        if(/期中考/.test(k)){aA.className = 'dv'}
+        if(/期末考/.test(k)){aA.className = 'dc'}
+        if(/ini/.test(k)){aA.className = 'lg'}
 
         // 加入data*名稱，才可動態查詢，有了這個屬性，可以用 CSS 來獲取
         g.setAttribute('data-title', k.toLowerCase())
@@ -489,11 +492,16 @@ function dt() {
         </div>
     <div id="mula">
         <h1 class="big">我的講義草稿 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()">
-            <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
+            <input type="button" class="lg" value="僅ini" onclick="MyIni('ini')">
+            <input type="button" class="dv" value="期中考" onclick="MyIni('期中考')">
+            <input type="button" class="dc" value="期末考" onclick="MyIni('期末考')">
+            <input type="button" class="t" value="2022" onclick="MyIni('2022')">
+            <input type="button" class="cy" value="2023" onclick="MyIni('2023')">
+            <!-- <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
             <input id="pdf" type="button" class="da" value="僅pdf" onclick="MyIni('pdf')">
             <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
             <input id="xls" type="button" class="yg" value="僅xls" onclick="MyIni('xls')">
-            <input id="ppt" type="button" class="t" value="僅ppt" onclick="MyIni('ppt')">
+            <input id="ppt" type="button" class="t" value="僅ppt" onclick="MyIni('ppt')"> -->
         </h1>
     </div>
     </body>
