add PWA && viewport && icons && update readme && dir && index

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
     <meta charset="utf-8">
     <head>
     <title>律藏會集、三大部、戒律諸書</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <link rel="icon" href="x-to-h/老和尚的蓮花.ico"/>
+    <link rel="canonical" href="https://adbdao.github.io/VinayaBooksAsJsHtml/" />
+    <link rel="manifest" href="/VinayaBooksAsJsHtml/VinayaBooksAsJsHtml.webmanifest">
 <style>
 /**{border-radius: 8px;padding: 3px;}*/
 
@@ -493,7 +496,56 @@ function dt() {
             <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
             <input id="xls" type="button" class="yg" value="僅xls" onclick="MyIni('xls')">
             <input id="ppt" type="button" class="t" value="僅ppt" onclick="MyIni('ppt')">
+            <button id="addPWA" disabled>安裝成APP<br />iPhone請使用「加到主頁面」</button>
         </h1>
     </div>
+    <script>
+        window.addEventListener('load', function () {
+            var btnSave = document.getElementById('addPWA')
+            var savedPrompt
+            // 註冊serviceWorker
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register(
+                    // Github路徑
+                    '/VinayaBooksAsJsHtml/pwabuilder-sw.js',
+                    { scope: '/VinayaBooksAsJsHtml/' }
+                )
+                    .then(function (registration) {
+                        console.log('ServiceWorker registration successful with scope:', registration.scope)
+                        // alert('安裝成功')
+                    }).catch(function (err) {
+                        console.log('ServiceWorker registration failed:', err)
+                        // alert('安裝失敗，請重新安裝')
+                    })
+            }
+            // 安裝按鈕
+            window.addEventListener('beforeinstallprompt', function (e) {
+                e.preventDefault()
+                btnSave.removeAttribute('disabled')
+                savedPrompt = e
+                // 我設定true
+                return true
+                // return false
+            })
+            // 安裝按鈕
+            btnSave.addEventListener('click', function () {
+                if (savedPrompt !== undefined) {
+                    savedPrompt.prompt()
+
+                    savedPrompt.userChoice.then(function (result) {
+
+                        if (result.outcome == 'dismissed') {
+                            // alert('使用者關閉主營幕')
+                            console.log('User dismissed homescreen install')
+                        } else {
+                            // alert('使用者加入主營幕')
+                            console.log('User added to homescreen')
+                        }
+                        savedPrompt = null
+                    })
+                }
+            })
+        })
+    </script>
     </body>
 </html>
