upload .adb.ini && index

--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <head>
     <title>我的講義草稿</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <base target="_blank">
     <link rel="icon" href="老和尚的蓮花.ico"/>
 <style>
