--- a/vinaya/index.html
+++ b/vinaya/index.html
@@ -497,7 +497,8 @@ function dt() {
             <input type="button" class="dv" value="期中考" onclick="MyIni('期中考')">
             <input type="button" class="dc" value="期末考" onclick="MyIni('期末考')">
             <input type="button" class="t" value="2022" onclick="MyIni('2022')">
-            <input type="button" class="cy" value="2023" onclick="MyIni('2023')">
+            <input type="button" class="lsg" value="2023" onclick="MyIni('2023')">
+            <input type="button" class="da" value="2024" onclick="MyIni('2024')">
             <!-- <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
             <input id="pdf" type="button" class="da" value="僅pdf" onclick="MyIni('pdf')">
             <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
