upload JY && .adb.ini

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@ background-repeat: no-repeat;*/
 .y {font-weight: bold;background: yellow;}
 .o {font-weight: bold;color: darkorange;}
 .yg {font-weight: bold;color: green;}
-.dc {font-weight: bold;color: darkcyan;background: white;}
+.dc {font-weight: bold;color: darkcyan;}
 .dg {font-weight: bold;color: salmon;}
 .b {font-weight: bold;color: blue;}
 .p {font-weight: bold;color: slateblue;}
@@ -491,11 +491,12 @@ function dt() {
         </div>
     <div id="mula">
         <h1 class="big">律藏會集、三大部、戒律諸書 <input type="text" id="search" style="height:14pt;" placeholder="輸入關鍵字查詢" onkeyup="dt()">
-            <input id="cbr" type="button" class="dc" value="僅文字網頁" onclick="MyIni('t')">
-            <input id="pdf" type="button" class="da" value="僅pdf" onclick="MyIni('pdf')">
-            <input id="doc" type="button" class="b" value="僅doc" onclick="MyIni('doc')">
-            <input id="xls" type="button" class="yg" value="僅xls" onclick="MyIni('xls')">
-            <input id="ppt" type="button" class="t" value="僅ppt" onclick="MyIni('ppt')">
+            <input id="cbr" type="button" class="lsg" value="網頁" onclick="MyIni('htm')">
+            <input id="cbr" type="button" class="p" value="純文字" onclick="MyIni('txt')">
+            <input id="pdf" type="button" class="da" value="pdf" onclick="MyIni('pdf')">
+            <input id="doc" type="button" class="b" value="doc" onclick="MyIni('doc')">
+            <input id="xls" type="button" class="yg" value="xls" onclick="MyIni('xls')">
+            <input id="ppt" type="button" class="t" value="ppt" onclick="MyIni('ppt')">
             <button id="addPWA" disabled>安裝成APP<br />iPhone請使用「加到主頁面」</button>
         </h1>
     </div>
