upload JY && .adb.ini

--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -2543,7 +2543,7 @@ h6 { color:hsl(210,60%,70%);}
 
 	《佛教律學彙集\毗尼討要\卷下》：「大僧又有四種不成惡觸一為受而捉不成惡觸（如俗器中盛食與比丘仰手受取前食雖僧俗兩執不成惡觸缽中舊食亦爾之也）二遇緣失受不成惡觸（如淨人觸失比丘洗手更從受之淨人不勞洗手）三持戒比丘誤捉不成惡觸四破戒比丘故觸不成惡觸」
 
-	《佛教律學彙集\毗尼答問\四藥受淨篇》：「問：以下乃本道場目前處理大眾僧食物狀況，因有僧眾持不同看法，故請法師釋疑：以下是食物處理程序：Ａ比丘尼、沙彌尼、淨人等，在明相未出前至大寮洗菜、煮飯菜。Ｂ於夏天，待明相出後，淨人手授食物與沙彌尼。之後，由沙彌尼將食物發與大眾僧。Ｃ早齋打板之後，全部發好的大眾僧食物再由淨人手受與當中一位比丘尼。Ｄ大眾僧入五觀堂用齋。Ｅ淨人或沙彌尼沿菜。今請問法師如下問題：
+	《佛教律學彙集\毗尼答問\四藥受淨篇》：「問：以下乃本道場目前處理大眾僧食物狀況，因有僧眾持不同看法，故請法師釋疑：以下是食物處理程序：Ａ比丘尼、沙彌尼、淨人等，在明相未出前至大寮洗菜、煮飯菜。Ｂ於夏天，待明相出後，淨人手受食物與沙彌尼。之後，由沙彌尼將食物發與大眾僧。Ｃ早齋打板之後，全部發好的大眾僧食物再由淨人手受與當中一位比丘尼。Ｄ大眾僧入五觀堂用齋。Ｅ淨人或沙彌尼沿菜。今請問法師如下問題：
 	1．在Ｂ之後，有比丘尼進入五觀堂，觸及已發給自己的那份食物時，是否犯惡觸？
 	2．沙彌尼是否於發菜時，即已完成供養之意？
 	3．於Ｃ之後，淨人或沙彌尼，見比丘尼桌上有殘菜渣，若前去擦拭或取去。
