upload JY && .adb.ini

--- a/不受食戒.html
+++ b/不受食戒.html
@@ -293,7 +293,7 @@
             }
 
             var acc = [
-                '問※答', '什麼叫「受食」？※有人拿食物給你，才可以吃。<br>比丘不可以主動去拿取食物及碰觸食物', '誰可以受食給比丘？※除了比丘(受比丘戒，具備比丘身份的人)，其他所有人都可以。<br>不只人，六道眾生都可以', '那些東西要手受？※食物、藥物。<br>就是四類藥：食藥、非時藥、七日藥、終身藥。<br>就是能放進口中吃的東西', '那些東西不需要手受？※水、<br>楊枝(刷牙及口腔清潔用品)、<br>腐爛藥(大開量)：大小便及灰土。<br>當然，不能吃的東西就不必手受', '那些東西介於兩者之間？※鹹水、濁水。<br>《摩訶僧祇律》：「若水濁者應受。若水性黃色者飲無罪」( 大正 22p357b )<br>《彌沙塞部和醯五分律》卷7：「有醎水，比丘不受不敢飲之。以是白佛。佛言：「若不著鹽，性醎，聽不受飲。」」(CBETA 2022.Q1, T22, no. 1421, p. 53c21-23)', '怎麼樣才算是正式的手受？※《四分律》：「<br>　　　　　　┌1. 手與手受。<br>　　　　　　├2. 或手與持物受。<br>受者有五種受┼3. 若持物授手受。<br>　　　　　　├4. 若持物授持物受。<br>　　　　　　└5. 若遙過物與。與者受者俱知中間無所觸礙。得墮手中。<br>　　　　　　┌1. 若身與身受<br>　　　　　　├2. 若衣與衣受。<br>復有五種受食┼3. 若曲肘與曲肘受<br>　　　　　　├4. 若器與器受。<br>　　　　　　└5. 若有因緣置地與<br>《彌沙塞部和醯五分律》：「<br>佛言。若無淨人聽諸比丘以施主語食為受食」<br>佛言。若施主惡賤不肯授食。亦聽以彼語取為受食。<br>　　　　┌1. 身授身受。<br>有四種受┼2. 物授物受。<br>　　　　├3. 手授手受。<br>　　　　└4. 教取而受。<br>《十誦律》：「<br>「大德自食，我等有急事。」留食便去。諸比丘不知當云何，是事白佛。佛言：「信佛法人一心與，若捨去便應食。」<br>《律二十二明了論》：「<br>偈曰：能解四種受命緣。<br>釋曰：律中說受攝飲食有四種：<br>　一、身受非心受。如律文，若比丘申鉢，心緣別事受他施飲食，廣說如本。<br>　二、有心受非身受。如律文，若人送飲食施此比丘，比丘心受，攝以屬己，廣說如本。<br>　三、有身心俱受。若比丘身心平等，欲得所施飲食。行施人至比丘邊，度與比丘非所遮。<br>　四、非身心受。如律文，若比丘或以脚指、或以手指畫地作界相。餘人送飲食置界中，此即被受。', '手受有時效嗎？※應該說：手受後能吃的時間。<br>　食藥：明相出至正午、<br>　非時藥：明相出至隔日明相出、<br>　七日藥：七日、<br>　終身藥：不限，就是終身', '怎麼樣會失去手受？※《明了論》：<br>偈曰：能解七種失受因。<br>釋曰：<br>1. 佛法中物有二種，謂┬淨、<br>　　　　　　　　　　└不淨。<br>　　　　　　　　　　┌一決意棄捨、<br>　　　　　　　　　　├二他逼奪、<br>　　　　　　　　　　├三所變異、<br>2. 失受攝因緣有七種：┼四度異性、<br>　　　　　　　　　　├五捨戒、<br>　　　　　　　　　　├六捨命、<br>　　　　　　　　　　└七正法滅沒。<br>　1. 決意棄捨者，若人不用此物，決意棄捨與他。<br>　2. 他逼奪者，若異自同類人，為屬己故逼奪。<br>　3. 變異者，用聖通慧，變異別物令成別物。<br>　4. 度異性者，轉男成女。<br>　5. 捨戒者，此物先是比丘受，後捨比丘戒，猶攝屬己，此物失本受。<br>　6. 捨命者，約一切退失故說失受，由一切滅失故受亦失。<br>　7. 正法滅沒者，是時中若無一人生在剡浮洲中入人道攝，或具戒或不具戒，無量壽命及轉易有生，聖人無復一在，此時正法已滅沒。<br>3. 由此七因緣，一切受攝皆謝。', '怎麼樣要重新手受？※1.灰塵落食上、2.淨人手觸。<br>《十誦律》：「<br>　佛言。從今日聽五塵不受應食。米塵穀塵水塵衣塵風塵。是為五塵。」( 大正 23p469b )<br>《善見律毘婆沙》：「<br>　若塵大，可除去食不犯，若塵細落不可除，應使人度……<br>　若食時，額頭汗流落鉢中，應更受。若臂中汗流入手，不須受。」( 大正 24p785a )<br>《摩訶僧祇律》卷16：「比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。<br>　坋草葉者，當更受。<br>　若坋草葉及食者，一切更受。<br>　若畜生振身塵來，若作意受者，得名為受。<br>　若眾鳥塵來亦如是。<br>　若比丘食時，女人行衣曳地塵起來坋，亦復如是。<br>　若淨人行草葉時，比丘應語言：「懸放。」若行鹽果菜，應語：「懸放。」<br>　若淨人行果墮草上，即轉去者，不名為受。<br>　小停者，得名為受。」(CBETA 2022.Q1, T22, no. 1425, p. 357b29-c7)<br>《十誦律》：「<br>行食不如法。半著鉢中半棄在地。是諸比丘不知云何得食。是事白佛。佛言。食墮所受草葉上者應食。若有土著者。吹土却而食。或有多土著者。水洗得食。」( 大正 23p273c )<br><br>《薩婆多毘尼毘婆沙》：「<br>設受已淨人若觸更受。」( 大正 23p539b )<br>'
+                '問※答', '什麼叫「受食」？※有人拿食物給你，才可以吃。<br>比丘不可以主動去拿取食物及碰觸食物', '誰可以受食給比丘？※除了比丘(受比丘戒，具備比丘身份的人)，其他所有人都可以。<br>不只人，六道眾生都可以', '那些東西要手受？※食物、藥物。<br>就是四類藥：食藥、非時藥、七日藥、終身藥。<br>就是能放進口中吃的東西', '那些東西不需要手受？※水、<br>楊枝(刷牙及口腔清潔用品)、<br>腐爛藥(大開量)：大小便及灰土。<br>當然，不能吃的東西就不必手受', '那些東西介於兩者之間？※鹹水、濁水。<br>《摩訶僧祇律》：「若水濁者應受。若水性黃色者飲無罪」( 大正 22p357b )<br>《彌沙塞部和醯五分律》卷7：「有醎水，比丘不受不敢飲之。以是白佛。佛言：「若不著鹽，性醎，聽不受飲。」」(CBETA 2022.Q1, T22, no. 1421, p. 53c21-23)', '怎麼樣才算是正式的手受？※《四分律》：「<br>　　　　　　┌1. 手與手受。<br>　　　　　　├2. 或手與持物受。<br>受者有五種受┼3. 若持物授手受。<br>　　　　　　├4. 若持物授持物受。<br>　　　　　　└5. 若遙過物與。與者受者俱知中間無所觸礙。得墮手中。<br>　　　　　　┌1. 若身與身受<br>　　　　　　├2. 若衣與衣受。<br>復有五種受食┼3. 若曲肘與曲肘受<br>　　　　　　├4. 若器與器受。<br>　　　　　　└5. 若有因緣置地與<br>《彌沙塞部和醯五分律》：「<br>佛言。若無淨人聽諸比丘以施主語食為受食」<br>佛言。若施主惡賤不肯授食。亦聽以彼語取為受食。<br>　　　　┌1. 身授身受。<br>有四種受┼2. 物授物受。<br>　　　　├3. 手授手受。<br>　　　　└4. 教取而受。<br>《十誦律》：「<br>「大德自食，我等有急事。」留食便去。諸比丘不知當云何，是事白佛。佛言：「信佛法人一心與，若捨去便應食。」<br>《律二十二明了論》：「<br>偈曰：能解四種受命緣。<br>釋曰：律中說受攝飲食有四種：<br>　一、身受非心受。如律文，若比丘申鉢，心緣別事受他施飲食，廣說如本。<br>　二、有心受非身受。如律文，若人送飲食施此比丘，比丘心受，攝以屬己，廣說如本。<br>　三、有身心俱受。若比丘身心平等，欲得所施飲食。行施人至比丘邊，度與比丘非所遮。<br>　四、非身心受。如律文，若比丘或以脚指、或以手指畫地作界相。餘人送飲食置界中，此即被受。', '手受有時效嗎？※應該說：手受後能吃的時間。<br>　食藥：明相出至正午、<br>　非時藥：明相出至隔日明相出、<br>　七日藥：七日、<br>　終身藥：不限，就是終身', '怎麼樣會失去手受？※《明了論》：<br>偈曰：能解七種失受因。<br>釋曰：<br>1. 佛法中物有二種，謂┬淨、<br>　　　　　　　　　　└不淨。<br>　　　　　　　　　　┌一決意棄捨、<br>　　　　　　　　　　├二他逼奪、<br>　　　　　　　　　　├三所變異、<br>2. 失受攝因緣有七種：┼四度異性、<br>　　　　　　　　　　├五捨戒、<br>　　　　　　　　　　├六捨命、<br>　　　　　　　　　　└七正法滅沒。<br>　1. 決意棄捨者，若人不用此物，決意棄捨與他。<br>　2. 他逼奪者，若異自同類人，為屬己故逼奪。<br>　3. 變異者，用聖通慧，變異別物令成別物。<br>　4. 度異性者，轉男成女。<br>　5. 捨戒者，此物先是比丘受，後捨比丘戒，猶攝屬己，此物失本受。<br>　6. 捨命者，約一切退失故說失受，由一切滅失故受亦失。<br>　7. 正法滅沒者，是時中若無一人生在剡浮洲中入人道攝，或具戒或不具戒，無量壽命及轉易有生，聖人無復一在，此時正法已滅沒。<br>3. 由此七因緣，一切受攝皆謝。', '怎麼樣要重新手受？※1.灰塵落食上、2.淨人手觸。<br>《十誦律》：「<br>　佛言。從今日聽五塵不受應食。米塵穀塵水塵衣塵風塵。是為五塵。」( 大正 23p469b )<br>《善見律毘婆沙》：「<br>　若塵大，可除去食不犯，若塵細落不可除，應使人度……<br>　若食時，額頭汗流落鉢中，應更受。若臂中汗流入手，不須受。」( 大正 24p785a )<br>《摩訶僧祇律》卷16：「<br>若比丘食時，風吹塵來坋鉢下草、不坋食者得食，<br>　草葉當受。<br>　若坋草葉及食者，一切更受。<br>比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。<br>　坋草葉者，當更受。<br>　若坋草葉及食者，一切更受。<br>　若畜生振身塵來，若作意受者，得名為受。<br>　若眾鳥塵來亦如是。<br>　若比丘食時，女人行衣曳地塵起來坋，亦復如是。<br>　若淨人行草葉時，比丘應語言：「懸放。」若行鹽果菜，應語：「懸放。」<br>　若淨人行果墮草上，即轉去者，不名為受。<br>　小停者，得名為受。」(CBETA 2022.Q1, T22, no. 1425, p. 357b29-c7)<br>《十誦律》：「<br>行食不如法。半著鉢中半棄在地。是諸比丘不知云何得食。是事白佛。佛言。食墮所受草葉上者應食。若有土著者。吹土却而食。或有多土著者。水洗得食。」( 大正 23p273c )<br><br>《薩婆多毘尼毘婆沙》：「<br>設受已淨人若觸更受。」( 大正 23p539b )<br>'
             ]
 
             // 範例圖表
@@ -388,7 +388,11 @@
 
         《善見律毘婆沙》：「
         若塵大，可除去食不犯，若塵細落不可除，應使人度」( 大正 24p785a )
-        《摩訶僧祇律》卷16：「比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
+        《摩訶僧祇律》卷16：「
+        若比丘食時，風吹塵來坋鉢下草、不坋食者得食，
+            草葉當受。
+            若坋草葉及食者，一切更受。
+        比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
             坋草葉者，當更受。
             若坋草葉及食者，一切更受。
             若畜生振身塵來，若作意受者，得名為受。
@@ -639,7 +643,11 @@
     《善見律毘婆沙》：「
         若塵大，可除去食不犯，若塵細落不可除，應使人度……
         若食時，額頭汗流落鉢中，應更受。若臂中汗流入手，不須受。」( 大正 24p785a )
-    《摩訶僧祇律》卷16：「比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
+    《摩訶僧祇律》卷16：「
+    若比丘食時，風吹塵來坋鉢下草、不坋食者得食，
+        草葉當受。
+        若坋草葉及食者，一切更受。
+    比丘食時，若牛、若駱駝等行，脚下塵來坋，不污食者得食。
         坋草葉者，當更受。
         若坋草葉及食者，一切更受。
         若畜生振身塵來，若作意受者，得名為受。
