--- a/新衣不作壞色著戒.html
+++ b/新衣不作壞色著戒.html
@@ -296,10 +296,10 @@
             var acc = [
                 "得三衣的布料<br>(要作新三衣) 得布料要補三衣 得現成的三衣 得其它的長衣",
                 "割截(截縷淨) 割截(截縷淨)  ",
-                "壞色，染成袈裟色(染淨) 壞色，染成袈裟色(染淨) 壞色，染成袈裟色(染淨)。如果已染好就不必再染 ",
+                "壞色，染成袈裟色(染淨) 壞色，染成袈裟色(染淨) 壞色，染成袈裟色(染淨)。如果已染好就不必再染(五分律開緣) ",
                 "縫成袈裟 縫補  ",
                 "加法受持 不必加法(和合淨)，除非破超過指甲大小 加法受持 對首作真實淨或展轉淨",
-                "點淨(青、黑、木蘭色) 不必點淨(和合淨)，除非原來的衣無點淨 點淨(青、黑、木蘭色) 點淨(青、黑、木蘭色)"
+                "染過不必點淨 不必點淨(和合淨)，除非原來的衣無點淨 染過不必點淨 點淨(青、黑、木蘭色)"
             ]
 
             // 範例圖表
