--- a/vinaya/戒學答問.html
+++ b/vinaya/戒學答問.html
@@ -370,7 +370,7 @@ h6 { color:hsl(210,60%,70%);}
 				// zzUp()
 				// 以正規搜尋網址列，請注意$1語法
 				div1.innerHTML = div1.innerHTML
-					.replace(/(https?:\/\/[a-zA-Z0-9\.\/_\=\-\?\:\;\&\%\#\@\+]+)/gi, '<a href="$1" target="_blank">$1</a>')
+					.replace(/(https?:\/\/[a-zA-Z0-9\.\/_\=\-\?\:\;\&\%\#\@\+]+)/gi, '<a href="$1" target="_blank">▲網路連結</a>')
 					.replace(/( target="_blank")+/gi, '$1')
 					.replace(/(\<\/a\>)+/gi, '$1')
 				// Copy()
